fixing even more layout issues to make full use of screen realestate on smaller devices.

--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,14 @@ a[href="furballs@furballcompany.com"]{
     color:var(--red-accent-1)
 }
 .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--brown-accent-1);
-    width: var(--content-max-width);
-    margin: 0 auto;
+    color: var(--teal-accent-5);
     font-size: 1.5rem;
-    padding: 10rem;
     line-height: 1.5;
-    color: var(--teal-accent-5)
+    width: 100%;
 }
 
 .about h1 {
@@ -134,6 +135,7 @@ body {
 .furball-story h1 {
     text-align: center;
 }
+
 .image-bg {
     background-image: url('../img/furball-background-2.webp');
     background-attachment: fixed;
@@ -145,19 +147,20 @@ body {
 
 .image-text {
     display: flex;
-    justify-content:center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
 }
 
 .image-text img{
     border-radius: 30px;
+    width: 40ch;
+    max-width: 100%;
 }
-
-.image-text > * {
-    max-width: 45%;
-    margin: 20px 1rem;
-    max-height: 25vh;
+.image-text p {
+    width: 40ch;
+    max-width: 100%;
 }
 .label-input {
     display: flex;
@@ -247,12 +250,19 @@ body {
     font-size:1.5rem;
     margin: 0 auto;
     max-width: 30ch;
-    padding: 10px;
+    padding: 30px;
     text-align: center;
     text-shadow: 2px 3px 2px white;
 }
+.text {
+    padding: 1ch;
+}
 .text-background {
     background-color: var(--brown-accent-1);
+}
+.text-wrapper {
+    width: 85ch;
+    max-width: 100%;
 }
 .transparent-background {
     background-color: var(--green-accent-1);
@@ -270,4 +280,3 @@ body {
 .weight-400 {
     font-weight: 400;
 }
-
